test/runnable/b10562.d
void main()
{
    int[3] ok = 3;

    int[][] da2;

    int[3][4] y;
    int[5][6] z = 16;
        
    int[3] value = [ 1, 2, 3 ];
    int[3][2] a = value;  
    assert(a == [ [ 1, 2, 3 ], [ 1, 2, 3 ] ]);

    int[3][2][3] b = [ [ 1, 2, 3 ], [ 4, 5, 6 ] ];
    assert(b == [ [ [ 1, 2, 3 ], [ 4, 5, 6 ] ],
                  [ [ 1, 2, 3 ], [ 4, 5, 6 ] ],
                  [ [ 1, 2, 3 ], [ 4, 5, 6 ] ] ]);

    int[3] val2 = [4, 5, 6];
    a = val2[];
    assert(a == [ [ 4, 5, 6 ], [ 4, 5, 6 ] ]);
}
